<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView 
	   	android:layout_width="fill_parent" 
	   	android:layout_height="fill_parent"
	   	android:layout_marginTop="15dip"
	   	android:layout_marginLeft="20dip"
	   	android:layout_marginRight="20dip"
	   	android:id="@+id/invalidConcert"
		android:text="@string/msg_concert_unknown"
		android:visibility="gone"
		/>    
    <TextView 
	   	android:layout_width="fill_parent" 
	   	android:layout_height="fill_parent"
	   	android:layout_marginTop="15dip"
	   	android:layout_marginLeft="20dip"
	   	android:layout_marginRight="20dip"
	   	android:id="@+id/errorLoadingConcert"
		android:text="@string/msg_concert_error"
		android:visibility="gone"
		/>    
        
    <ScrollView 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:id="@+id/scroller"
    >
	    <LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:paddingTop="20dip"
	    	android:paddingBottom="20dip">
	
		    <TextView 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/artist"
		    	android:paddingLeft="5dip"
		    	style="@style/NewsItemTitle"
		    	/>
		    <TextView 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/date"
		    	android:paddingLeft="5dip"
		    	style="@style/NewsItemTitle"
		    	/>
		    <TextView 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/name"
		    	android:paddingLeft="5dip"
		    	style="@style/NewsStorySubtext"
		    	/>
		    
		    <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:paddingRight="20dip">

                <Button
                    android:id="@+id/playAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/story_button_background"
                    android:drawableLeft="@drawable/speaker_icon"
                    android:text="@string/msg_listen_now" />

                <Button
                    android:id="@+id/queueAllButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/story_button_background"
                    android:drawableLeft="@drawable/plus"
                    android:text="@string/msg_listen_later" />
            </LinearLayout>
		    	
			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    	android:layout_width="fill_parent" 
		    	android:layout_height="fill_parent"
		    	android:id="@+id/tracksTable"
		    	android:stretchColumns="0"
		    	android:shrinkColumns="0">
		    </TableLayout>
		    
		    <TextView 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:id="@+id/notes"
		    	android:layout_marginTop="15dip"
		    	android:paddingLeft="5dip"
		    	/>
		    	    
		</LinearLayout>
	</ScrollView>

</LinearLayout>
